Initial Octopress setup done

--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
+url: http://byclor.org
 title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+subtitle: Byclor.
+author: Vipul A M
 simple_search: http://google.com/search
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
@@ -19,13 +19,13 @@ email:
 # ----------------------- #
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
-root: /
+
 permalink: /blog/:year/:month/:day/:title/
 source: source
-destination: public
+#destination: public
 plugins: plugins
-code_dir: downloads/code
-category_dir: blog/categories
+#code_dir: downloads/code
+#category_dir: blog/categories
 markdown: rdiscount
 pygments: false # default python pygments have been replaced by pygments.rb
 
@@ -49,13 +49,13 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
-github_repo_count: 0
-github_show_profile_link: true
-github_skip_forks: true
+#github_user: byclor 
+#github_repo_count: 1
+#github_show_profile_link: true
+#github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: vipulnsward
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
@@ -67,15 +67,15 @@ google_plus_one: true
 google_plus_one_size: medium
 
 # Pinboard
-pinboard_user:
-pinboard_count: 3
+#pinboard_user:
+#pinboard_count: 3
 
 # Delicious
-delicious_user:
-delicious_count: 3
+#delicious_user:
+#delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
+#disqus_short_name:
 
 # Google Analytics
-google_analytics_tracking_id:
+#google_analytics_tracking_id:
